lab/node-test-app/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: node-test-app
  namespace: node-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-test-app
  template:
    metadata:
      name: node-test-app-pod
      labels:
        app: node-test-app
    spec:
      containers:
      - name: node-test-app
        image: nihaltp/nodeapp:v1
        ports:
        - containerPort: 5000
