lab/node-test-app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: node-test-app-service
spec:
  selector:
    app: node-test-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
