lab/node-test-app/httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: http-route
  namespace: node-ns
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - pr-pr_num.dns-vector.online
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: node-test-app-service
          port: 80
