lab/node-test-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-test-app-ingress
  namespace: node-ns
spec:
  ingressClassName: nginx
  rules:
    - host: my-host
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: node-test-app-service
                port:
                  number: 80
